# SMCPv1

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.emergent/: emergent.yml
code/: pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
code/examples/: advanced_usage.py  basic_usage.py
code/smcp_security/: __init__.py  ai_immune.py  audit.py  authorization.py  core.py  cryptography.py  exceptions.py  input_validation.py  rate_limiting.py
code/tests/: __init__.py
code/tests/fixtures/: __init__.py  attack_data.py
code/tests/integration/: __init__.py  test_end_to_end.py
code/tests/unit/: __init__.py  test_ai_immune.py  test_authorization.py  test_core.py  test_rate_limiting.py
deployment/: DEPLOYMENT_ANALYSIS.md  README.md  README_COMPLETE.md  installation.md
deployment/docker/: Dockerfile  config.json  docker-compose.yml  entrypoint.sh  nginx.conf
deployment/docs/: integration-guide.md  quick-start.md  security-config.md  troubleshooting.md
deployment/examples/: fastapi_integration.py  middleware.py  nodejs_client.js  package.json
deployment/hosted-api/: Dockerfile  app.py  render.yaml  requirements.txt
deployment/pypi/: MANIFEST.in  README.md  pyproject.toml  setup.py
deployment/scripts/: install.ps1  install.sh  uninstall.sh  update.sh
docs/: SMCP_v1_Technical_Monoreport.md  architecture.md
libraries/csharp/: README.md  SMCP.Security.csproj  SMCPSecurityFramework.cs
libraries/go/: README.md  go.mod
libraries/go/smcp/: security.go
libraries/java/: README.md  pom.xml
libraries/java/src/main/java/com/smcp/security/: SMCPSecurityFramework.java
libraries/nodejs/: README.md  package.json  tsconfig.json
libraries/nodejs/src/: index.ts
libraries/nodejs/src/core/: SMCPSecurityFramework.ts  SecurityConfig.ts
libraries/nodejs/src/exceptions/: index.ts
libraries/nodejs/src/types/: index.ts
libraries/python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
libraries/python/examples/: basic_usage.py  fastapi_example.py
libraries/python/smcp_security/: ai_immune.py  audit.py  authentication.py  cli.py  core.py  cryptography.py  middleware.py  rate_limiting.py
libraries/python/tests/: __init__.py  conftest.py
libraries/python/tests/data/: __init__.py
libraries/python/tests/fixtures/: mock_objects.py  performance_data.py  test_utils.py
libraries/python/tests/integration/: test_security_layers.py
libraries/python/tests/unit/: test_ai_immune.py  test_audit.py  test_authentication.py  test_cryptography.py  test_input_validation.py
libraries/rust/: Cargo.toml  README.md
libraries/rust/src/: core.rs  errors.rs  lib.rs  types.rs
libraries/vscode-extension/: README.md  package.json
libraries/vscode-extension/src/: extension.ts
libraries/vscode-extension/src/commands/: projectInitializer.ts
paper/: SMCP_v1_Academic_Paper.md
scripts/: publish-all.sh  publish-csharp.sh  publish-go.sh  publish-java.sh  publish-nodejs.sh  publish-python.sh  publish-rust.sh  publish-vscode.sh
